--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@callstack/react-native-visionos": "0.73.8",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-native": "0.74.0-rc.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
